--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,4 +23,4 @@ jobs:
         distribution: 'temurin'
 #        cache: maven
     - name: Build with Maven
-      run: echo ${{ secrets.BLUBB }}
+      run: echo blubb
